# The_Council_v2

./: .gemini.md  .gitignore  ARCHITECTURE.md  README.md  prd_content.md  prd_text.txt
backend/: .env.example  CHANGELOG_QUERY_ENGINE.md  IMPLEMENTATION_COMPLETED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  inspect_meta.py  main.py  pyproject.toml  quick_verify.py  test_chart.csv  test_doc_query.py  test_faiss_kb.py  test_fix.py  test_infer.csv  test_polars_actual.py  test_polars_infer.py
backend/.hypothesis/constants/: 25d805461d3fc229  416276b8330382d3  9d6af4c07cf029d0  c9155c7c2072b578
backend/.hypothesis/tmp/: tmp76kdiz50  tmpu4qo2z0l
backend/agents/: analyst_agent.py  analyst_agent.py.backup_20251211_145037  designer_agent.py  designer_agent.py.backup_20251211_150216  general_agent.py  librarian_agent.py  router_agent.py
backend/engines/: data_engine.py  llm_engine.py  memory_engine.py  query_engine.py  semantic_engine.py  visualization_engine.py  visualization_engine.py.backup_20251211_151323
backend/tests/: evaluate_librarian.py  test_all_agents.py  test_analyst_e2e.py  test_data_engine_property.py  test_lib_simple.py  test_polars_kb.py  test_query_engine.py  test_semantic.py  test_simple_polars.py  test_simple_query.py
backend/utils/: json_utils.py  logging_config.py
backend/workflow/: graph.py  state.py
docs/: code_index.md
frontend/: instrumentation.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DataTable.tsx  (+2 more)
(+2 files in other folders)
