[project]
name = "the-council-backend"
version = "0.1.0"
description = "Multi-agent data analysis council"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.2",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.10",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "markupsafe<3.0.0",
    "polars>=1.36.1",
    "pypdf>=6.4.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
    "loguru>=0.7.2",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "langsmith>=0.1.77",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.111.0",
    "pytest-xdist>=3.6.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
